--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
 {% block content %}
   {% for post in posts %}
   <div class="card mb-4">
-    <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+    <a href="#!"><img class="card-img-top" src="{% static 'imgFile/stft_shape.png' %}" alt="..." /></a>
     <div class="card-body">
       <div class="small text-muted">{{ post.published_date }}</div>
       <h2 class="card-title h4">{{ post.title }}</h2>
