--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,12 +16,11 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">경희대학교 웹서비스프로그래밍 2021</a>
+                <a class="navbar-brand" href="#!">B2I_GAN</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -30,8 +29,8 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">연구 끄적이는 블로그</h1>
-                    <p class="lead mb-0">ML</p>
+                    <h1 class="fw-bolder">Introduce Anomaly Detection Deep Learning Model</h1>
+                    <p class="lead mb-0">using STFT translator and GAN</p>
                 </div>
             </div>
         </header>
